Update 56. Merge Intervals.java